--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                         <a href="#home" class="text-white hover:text-red-600 text-2xl">Home</a>
                         <a href="#about" class="text-white hover:text-red-600 text-2xl">About</a>
                         <a href="#product" class="text-white hover:text-red-600 text-2xl">Products</a>
-                        <a href="#" class="text-white hover:text-red-600 text-2xl">Contact</a>
+                        <a href="#contact" class="text-white hover:text-red-600 text-2xl">Contact</a>
 
-                        <button
-                            class="px-6 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700 transition duration-300">
+                        <a href="form.html"><button
+                            class="px-6 py-2 bg-red-800 text-white rounded-lg hover:bg-red-500 transition duration-300">
                             Sign Up
-                        </button>
+                        </button></a>
 
                     </div>
                 </div>
@@ -40,23 +40,24 @@
 
         <!-- section 1   -->
         <div style="display: flex;">
-            <div>
-                <img src="./Asscts/images/wine-bottle1.svg" class="h-230 pt-60">
+            <div class="pt-10 ">
+                <h2 class="text-6xl pt-90  text-white"><b>EXPLORE OUR<BR> WIDE VARITY<BR> OF WINES.</b></h2><br>
+                    <button class="px-10 py-3 bg-red-800 text-white hover:bg-red-500 transition duration-300">
+                        Book A Tour
+                    </button>
             </div>
-            <div>
-                <h2 class="text-6xl pt-90 mr-50 text-white"><b>EXPLORE OUR<BR> WIDE VARITY<BR> OF WINES.</b></h2><br>
-                <button class="px-10 py-3 bg-orange-600 text-white hover:bg-red-700 transition duration-300">
-                    Book A Tour
-                </button>
+            <div class="pt-50 pl-20">
+                <img src="./Asscts/images/wine-bottle1.svg">
+                
 
             </div>
         </div>
 
-    </section><br>
+    </section>
 
      <!-- section 2 about -->
 
-     <section id="about" style="height: 1000px; padding-top: 30px;">
+     <section id="about" style="height: 1000px; padding-top: 30px;" class="bg-gray-200">
         <div style="text-align: center; padding-top: 100px;">
             <p class="text-2xl text-gray-500"><b>ABOUT US</b></p>
             <p class="text-6xl"><b>HISTORY AND TRADITION <br>OF OUR WINES</b></p>
@@ -96,16 +97,17 @@
     </section>
 
     <!-- section 4 -->
-     <section>
+     <section class="h-180 pt-20 bg-gray-200">
         <div class="text-center">
             <p class="text-2xl text-gray-500"><b>HOW WE WORK</b></p><br>
             <p class="text-4xl text-green-800"><b>THE BEST INGREDIENTS</b></p>
         </div>
 
         <div>
-            <div style="display: flex; height: 500px;">
+            <div style="display: flex; height: 500px; padding-left: 150px;">
                 <img src="./Asscts/images/Black-Grapes-PNG-High-Quality-Image.png">
-                <img src="./Asscts/images/green-grapes.jpg">
+                <img src="./Asscts/images/greenpng.png">
+                <img src="./Asscts/images/redpng.png">
             </div>
             <div>
 
@@ -116,9 +118,10 @@
        
 
     <!-- section footer -->
-    <section>
+    <section id="contact">
         <footer>
-            <div class="text-white bg-green-800" style="display: flex; gap: 120px; height: 300px; border-radius: 30px; padding-left: 150px; padding-top: 40px;"><br>
+            <div class="text-white bg-green-800" style="display: flex; gap: 120px; height: 300px; border-radius: 30px; padding-top: 40px;"><br>
+                <div><img src="./Asscts/images/24-grape-png-image-download-picture.png" style="height: 200px;"></div>
                 <div>
                     <p class="text-4xl"><b>Wines</b></p>
                     <p class="text-2xl">Stanly Road, Jaffna.<br>Srilanka</p>
